--- a/to-do-list.css
+++ b/to-do-list.css
@@ -7,37 +7,60 @@ body {
     background: linear-gradient(90deg, rgba(65, 184, 131, 1) 0%, rgba(0, 212, 255,1)100%);
 }
 
-.digitar-tarefa {
-    align-items: center;
-    margin: 0px;
-    height: 60px;
-    width: 1225px;
-    padding-left: 5%;
-    font-size: large;
-    border: 1px solid #000000;
-}
-
-.button-add {
-    height: 61px;
-    width: 120px;
-    cursor: pointer;
-    margin-left: 15px;
+.alinharBt {
+    display: flex;
 }
 
 .ladoTexto {
     background-color: #fff;
-    border-radius: 5px;
-    box-shadow: 0 15px 30px rgba(0, 0, 0, 0.3);
     width: 1225px;
-    
+    border-radius: 10px;
 }
 
-.error {
-   border: 2px red; 
+.ladoTexto:hover {
+    box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
 }
 
-.error::placeholder {
-    color: red;
+.digitar-tarefa {
+    align-items: center;
+    height: 60px;
+    width: 1225px;
+    padding-left: 5%;
+    font-size: large;
+    border: 2px #000000;
+    border-radius: 10px;
+}
+
+ .error::placeholder {
+     color: red;
+ }
+
+.ladoBotao {
+    width: 120px;
+    height: 61px;
+}
+
+.ladoBotao:hover {
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+}
+
+.button-add {
+    background-color: #41b883;
+    color: #fff;
+    height: 61px;
+    width: 120px;
+    cursor: pointer;
+    margin-left: 7px;
+    border:none;
+    border-radius: 10px;
+}
+
+.tasks-container {
+    background-color: #fff;
+    padding: 30px 20px;
+    margin-top: 60px;
+    border-radius: 10px;
+    width: 100%;
 }
 
 .task-item {
@@ -55,25 +78,10 @@ body {
     border-radius: 5px;
 }
 
-.completed {
-    text-decoration: line-through;
-}
-
 .task-item i:hover {
     cursor: pointer;
 }
 
-#alinharTexto {
-    border-radius: 5px;
-    margin: 0px;
+.completed {
+    text-decoration: line-through;
 }
-
-.ladoBotao {
-    width: 120px;
-    height: 61px;
-}
-
-.alinharBt {
-    display: flex;
-}
-
